Displayed InfoWindow when location name (on left) is clicked

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                     <li data-bind="text: title, click: showInfo($parent)"></li>
                 </ul>
 
-                <div data-bind="with: currentLocation">
+                <!-- <div data-bind="with: currentLocation">
                     <h2 data-bind="text: title"></h2>
-                </div>
+                </div> -->
             </div>
             <hr>
         </div>
@@ -134,14 +134,18 @@
             if (status == google.maps.places.PlacesServiceStatus.OK) {
                 for (var i = 0; i < results.length; i++) {
                     var place = results[i];
-                    myModel.locationList.push(new Location(place.name));
-                    createMarker(results[i], i);
+                    myModel.locationList.push(new Location({title: place.name, address: place.vicinity}));
+                    var marker = createMarker(results[i], i);
+                    myModel.markerList.push(marker);
+                    console.log(marker);
                 }
                 console.log("inside callback: " + myModel.locationList().length);
+                console.log("inside callback: " + myModel.markerList().length);
             }
         }
 
         var largeInfowindow = new google.maps.InfoWindow();
+        myModel.infoWindow(largeInfowindow);
 
         // Style the markers a bit. This will be our listing marker icon.
         var defaultIcon = makeMarkerIcon('0091ff');
@@ -164,7 +168,7 @@
             //markers.push(marker);
             // Create an onclick event to open the large infowindow at each marker.
             marker.addListener('click', function() {
-                populateInfoWindow(this, largeInfowindow, place);
+                populateInfoWindow(this, largeInfowindow, place.vicinity);
             });
             // Two event listeners - one for mouseover, one for mouseout,
             // to change the colors back and forth.
@@ -176,15 +180,17 @@
             });
 
             marker.setMap(map);
+            return marker;
         }
         //ko.applyBindings(myModel);
     }
 
-    function populateInfoWindow(marker, infowindow, place) {
+    function populateInfoWindow(marker, infowindow, address) {
+
         // Check to make sure the infowindow is not already opened on this marker.
         if (infowindow.marker != marker) {
             // Clear the infowindow content to give the streetview time to load.
-            infowindow.setContent(marker.title + "<br>" + place.vicinity);
+            infowindow.setContent(marker.title + "<br>" + address);
             infowindow.marker = marker;
             // Make sure the marker property is cleared if the infowindow is closed.
             infowindow.addListener('closeclick', function() {
