--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <div class="options-box">
             <h1>Find Libraries in Singapore</h1>
             <div>
-                <input id="txtFilter" type="text" placeholder="Location Name">
-                <input id="btnFilter" type="button" value="Filter">
+                <input id="txtFilter" type="text" data-bind="textInput: searchText" placeholder="Location Name">
+                <!-- <input id="btnFilter" type="button" value="Filter"> -->
             </div>
             <hr>
             <div>
-                <ul data-bind="foreach: locationList">
-                    <li data-bind="text: title, click: showInfo($parent)"></li>
+                <ul data-bind="foreach: filteredMarkerList">
+                    <li data-bind="text: title, click: $parent.showInfo"></li>
                 </ul>
             </div>
             <hr>
@@ -27,15 +27,13 @@
 
     <script src="js/lib/knockout-3.2.0.js"></script>
 
-
     <script src="js/app.js"></script>
+    <script src="js/map.js"></script>
 
     <script async defer
         src=
         "https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyCSAT41RUuOOAuIAqZKlAYBf2zKzDEtrJs&v&v=3&callback=initMap"
         onerror="googleError()">
     </script>
-    <script src="js/map.js"></script>
-
 </body>
 </html>
