--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="options-box">
-            <h1>Find Libraries in Singapore</h1>
+            <h1>Find places in New York</h1>
             <div>
                 <input id="txtFilter" type="text" data-bind="textInput: searchText" placeholder="Location Name">
                 <!-- <input id="btnFilter" type="button" value="Filter"> -->
@@ -26,6 +26,7 @@
     </div>
 
     <script src="js/lib/knockout-3.2.0.js"></script>
+    <script src="js/lib/jquery.min.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/map.js"></script>
