--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
+    <a class="slide-toggle">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M2 6h20v3H2zm0 5h20v3H2zm0 5h20v3H2z"/>
+        </svg>
+    </a>
     <div class="container">
         <div class="options-box">
             <h1>Find places in New York</h1>
@@ -30,6 +35,16 @@
 
     <script src="js/app.js"></script>
     <script src="js/map.js"></script>
+    <script>
+    $(document).ready(function(){
+        $(".slide-toggle").click(function(){
+            $(".options-box").animate({
+                width: "toggle"
+            });
+            $("#map").toggleClass("toggled");
+        });
+    });
+    </script>
 
     <script async defer
         src=
